Change log for zeit.web
=======================

PREDEPLOY
---------


POSTDEPLOY
----------


3.147 (unreleased)
--------------------

- ZON-4600: Set C1 adblocker headers on specific test articles
  /digital/internet/2017-11/firefox-quantum-browser-test-vergleich-google-chrome
  /digital/internet/2018-04/adblocker-urteil-bgh-springer-adblock-plus

- BUG-904: Decode obfuscated article date in ZEIT Arbeit

- BUG-908: Prevent rendering Unicode-Icon as Emoji


3.146.1 (2018-04-26)
--------------------

- OPS-877: Fix community uniqueIds for creating commentsections


3.146 (2018-04-26)
------------------

- ZON-4478: Use genre source to determine the complete byline prefix

- BUG-901: Fix canonical URL on full view in verticals

- BUG-872: Fix view_config specificity for amp/liveblog articles

- MAINT: Use core mechanic to render ZMO byline

- MAINT: Remove unused DOM element id attribute

- FIX: Fix path for webfont preloads


3.145 (2018-04-24)
------------------

- SSL-227: Remove non-ssl links to live0.zeit.de

- SSL-223: Repair webtrekk contentId

- SSL-222: Make Z+ badge protocol aware

- SSL-228: Use SSL hosts in framebuilder login status

- SSL-229: Remove schema in HP overlay webtrekk content id

- SSL-225: Use HTTPS for external links if appropriate

- SSL-226: Remove ssl.zeit.de from amp tracking

- PERF: Preload webfonts on ZON


3.144 (2018-04-23)
------------------

- ZON-4609: Do not index comment-paginated pages in Ligatus

- ZON-4434: Transmit article genre to webtrekk

- ZON-4599: Polish ZMO article footer

- ZON-4589: Remove article navigation (aka "lineage")

- ZON-4610: Force images on video teaser in mobile view

- ZON-4591: Migrate zoca json endpoint to elasticsearch

- ZON-4516: Add request metrics for Liveblog3

- SSL-205: Load all assets from https://static.zeit.de

- SSL-220: Replace links in raw, if referenced by file

- BUG-897: Adjust tablet viewport on all verticals

- BUG-898: Fix date error in news teasers
