@@ -103,10 +103,4 @@
   <setting name="podcast_theme_article_body" xsi:type="xsd:string">zon-standalone</setting>
   <setting name="podcast_theme_article_header" xsi:type="xsd:string">zon-minimal</setting>
 
-  <!-- To enable, insert path to optimizely Script (//cdn.optimizely.com/js/281825380.js).
-  To disable, use empty string. Do NOT use "false". -->
-  <setting name="optimizely_on_zon_homepage" xsi:type="xsd:string"></setting>
-  <setting name="optimizely_on_zon_centerpage" xsi:type="xsd:string"></setting>
-  <setting name="optimizely_on_zon_article" xsi:type="xsd:string"></setting>
-
 </settings>
