@@ -45,9 +45,6 @@
     {% if toggles('third_party_modules') -%}
         <script src="https://script.ioam.de/iam.js"></script>
     {% endif -%}
-    {% if view.include_optimizely -%}
-        <script src="{{ view.include_optimizely }}"></script>
-    {% endif -%}
 
     {% if toggles('third_party_modules', 'iqd') %}
         {% include "zeit.web.core:templates/inc/ads/head.html" %}
