@@ -86,11 +86,6 @@ class Article(zeit.web.core.view_article.Article, zeit.web.site.view.Base):
             return atoms[pos - 1:pos + 2]
 
     @zeit.web.reify
-    def include_optimizely(self):
-        conf = zope.component.getUtility(zeit.web.core.interfaces.ISettings)
-        return conf.get('optimizely_on_zon_article', None)
-
-    @zeit.web.reify
     def volumepage_is_published(self):
         cp = zeit.content.cp.interfaces.ICenterPage(self.volume, None)
         pubinfo = zeit.cms.workflow.interfaces.IPublishInfo(cp, None)
