@@ -63,14 +63,6 @@ class Centerpage(
             self._buzzboard_images.update({image: True})
         return registered_images
 
-    @zeit.web.reify
-    def include_optimizely(self):
-        conf = zope.component.getUtility(zeit.web.core.interfaces.ISettings)
-        if self.is_hp:
-            return conf.get('optimizely_on_zon_homepage', None)
-        else:
-            return conf.get('optimizely_on_zon_centerpage', None)
-
 
 @zeit.web.view_config(
     context=zeit.content.cp.interfaces.ICP2015,
